<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/loc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:drawableStart="@mipmap/locate2"
            android:drawableLeft="@mipmap/locate2"
            android:clickable="true"
            android:textColor="#000"
            android:textSize="16sp"
            android:visibility="gone"/>
        <com.example.greenweather.util.ClearEditText
            android:id="@+id/filter_edit"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/shape_rectangle_white"
            android:hint="@string/inputcity"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:imeOptions="actionDone"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/citynamequery"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:clickable="true"
            android:text="@string/citynamequery"/>
        <TextView
            android:id="@+id/citynameconcen"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citynameconcen"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/headcitylistlayout"
    android:visibility="gone">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityconcened"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/bg"
        android:textSize="14sp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cityconceneddel"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="#999"
            android:textSize="12sp"
            />
    </LinearLayout>
    <com.example.greenweather.widget.MyGridView
        android:id="@+id/id_gv_remen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        />

</LinearLayout>
</LinearLayout>